# disposable-email-domain-list

./: .gitignore  README.md  allowlist.txt  domains.json  domains.txt  pyproject.toml  requirements.txt
.github/workflows/: update-domains.yml
cache/: inactive_domains.txt
config/: sources.txt
src/disposable_domains/: __init__.py  cli.py  config.py  dns_check.py  domain_parser.py  fetcher.py  files.py  pipeline.py
tests/: test_dns_check.py  test_domain_parser.py  test_pipeline.py
