[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "disposable-email-domain-list"
version = "0.1.0"
description = "Aggregate, clean, and DNS-validate disposable email domains."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dnspython>=2.6,<3",
    "requests>=2.32,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
]

[project.scripts]
update-disposable-domains = "disposable_domains.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
